--- a/less/_codemirror-chrome.less
+++ b/less/_codemirror-chrome.less
@@ -98,6 +98,10 @@ span.cm-token-highlight:before {
 
 .CodeMirror-linenumber {border-right: none !important;}
 
+.cm-line-without-source-mapping {
+	background-color: @cm-lines-no-sourcemap !important;
+}
+
 @-webkit-keyframes fadeout-revised {
 	0% {
 			background-color: @selection-background;
