--- a/theme-extension/canary.css
+++ b/theme-extension/canary.css
@@ -293,6 +293,9 @@ span.cm-token-highlight:before {
 .CodeMirror-linenumber {
   border-right: none !important;
 }
+.cm-line-without-source-mapping {
+  background-color: #252525 !important;
+}
 @-webkit-keyframes fadeout-revised {
   0% {
     background-color: #364c3b;
@@ -781,6 +784,13 @@ body.dock-to-right:not(.undocked):not(.overlay-contents) {
 }
 #search-results-pane-file-based .parent::before {
   -webkit-mask-position: -4px -93px !important;
+}
+.panel.network .outline-disclosure li.parent::before {
+  top: 3px !important;
+}
+.section > .header::before,
+.event-bars .event-bar .header::before {
+  margin-top: 3px !important;
 }
 /**********************************************/
 /* Console
@@ -2599,4 +2609,32 @@ select.tabbed-pane-header-tabs-drop-down-select {
 }
 .data-grid td {
   color: #cccccc !important;
+}
+/*L27 - text color of status bar labels
+replaces '.search-status-bar-summary span'*/
+.search-status-bar-summary .search-message {
+  text-shadow: none !important;
+  color: #cccccc !important;
+}
+.save-device-button,
+.remove-device-button {
+  background-image: linear-gradient(#505050, #363636) !important;
+  color: #b3b3b3 !important;
+  border: 1px solid #3c3c3c !important;
+  border-radius: 3px !important;
+  cursor: pointer !important;
+  box-shadow: none !important;
+  text-shadow: none !important;
+}
+.save-device-button:disabled,
+.remove-device-button:disabled {
+  cursor: default !important;
+  opacity: 0.3 !important;
+}
+.save-device-button:not(:disabled):active,
+.remove-device-button:not(:disabled):active {
+  box-shadow: inset 0 1px 1px 0 #151515, 0 1px 1px 0 #6f6f6f !important;
+}
+.blackbox-dialog .columns-header {
+  color: #89f5a2 !important;
 }
