--- a/themes/s10wen-monokai.less
+++ b/themes/s10wen-monokai.less
@@ -135,6 +135,7 @@
 @cm-gutter-lines       : lighten(@global-background, 40%);
 @cm-matching-bracket   : #15ca1a;
 @cm-nonmatching-bracket: #db0404;
+@cm-lines-no-sourcemap : lighten(@global-background, 1%);
 @cm-selected           : lighten(@global-background, 10%);
 @cm-whitespace         : lighten(@global-background, 5%);
 
